kustomize/postgres/base/postgres-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: postgres
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
